status/sp/spoon/1.0.1/macos/darwin-21.6.0/gnat=10.3.2/spoon-1.0.1.yaml.log
Test ran at 2024-08-15 00:30:12.470744+00:00

SOLUTION:
spoon=1.0.1: Use posix_spawn() to spawn processes without forking
Origin: commit c07167a55d5fa2ebbfa7ff4689959e08128e8a69 from https://github.com/onox/spoon.git
Available when: (case OS is Linux => True, Macos => True, others => False)
Properties:
   Author: onox
   Build Switches: 
   Description: Use posix_spawn() to spawn processes without forking
   License: Apache-2.0
   Maintainer: onox <denkpadje@gmail.com>
   Maintainers_Logins: onox
   Name: spoon
   Tag: posix
   Tag: spawn
   Tag: process
   Version: 1.0.1
   Website: https://github.com/onox/spoon


LOG:
Note: Deploying spoon=1.0.1...
Note: Building spoon/spoon.gpr...
Setup
   [mkdir]        object directory for project Spoon
   [mkdir]        library directory for project Spoon
Compile
   [C]            knife.c
   [Ada]          spoon.adb
   [Ada]          spoon-api.ads
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/spawn.h:32,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/52292d81-1a79-4a5b-8b19-96a680d34f82/spoon_1.0.1_c07167a5/src/knife.c:17:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of knife.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/52292d81-1a79-4a5b-8b19-96a680d34f82/spoon_1.0.1_c07167a5/spoon.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/52292d81-1a79-4a5b-8b19-96a680d34f82/spoon_1.0.1_c07167a5/spoon.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/52292d81-1a79-4a5b-8b19-96a680d34f82/spoon_1.0.1_c07167a5/spoon.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x104c72000
Call stack traceback locations:
0x10557a415 0x10524de83 0x105460df9 0x105461581 0x1053c1ac3 0x1053bff99 0x1053dc873 0x105428dc1 0x10542781a 0x1053dc9b8 0x1053c0349 0x104cd19c1 0x104ce2578 0x104ce701c 0x104d6d05c 0x104d783b8 0x104c73605 0x104c76914


Warning: spoon=1.0.1 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
